objects/MMPJ_TOPG_ProjectTeamMember__c.object
<CustomObject>
    <description>Used for MMPJ TopGun app</description>
    <fields>
        <fullName>MMPJ_TOPG_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for the TOP GUN Project</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Project_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>used for the TOP GUN Project</description>
        <label>Project --</label>
        <referenceTo>MMPJ_TOPG_Project__c</referenceTo>
        <relationshipName>Project_Team_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Title__c</fullName>
        <description>Used for th TOP GUN Project</description>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for the TOP GUN Project</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Who__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Who</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Project Team Member</label>
    <nameField>
        <label>Project Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>